Remove deprecated APIs (#17)
* Removed deprecated APIs

* Version 3.0.2